# timestamp_generator

./: .gitignore  CMakeLists.txt  CommandLineArgumentsOptionsParser.h  IDGenerator.cpp  IDGenerator.h  OptionParserCrossPlatformStdOnly.cpp  OptionParserCrossPlatformStdOnly.h  OptionParserPosixOnlyViaGetopt.cpp  OptionParserPosixOnlyViaGetopt.h  Options.cpp  Options.h  README.md  Timestamp.cpp  Timestamp.h  main.cpp
